assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100,200,300,400,500,600,700|Lato:100,200,300,400,500,600,700');

body {
    font-family: 'Lato', sans-serif;
    background-color: #7faddb;
    font-weight: 300;
    font-size: 18px;
    text-align: center;
}

section {
    margin: 0 2rem;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Roboto Mono', sans-serif;
    font-size: 1.5rem;
    text-transform: uppercase;
}

.smaller-font-size {
    font-size: 14px;
}

.header-style {
    border-bottom: 2px solid black;
    background-color: #ea632b;
}

.page-headline {
    padding-left: 1rem;
    padding-bottom: 1.5rem;
}

.faq-box {
    padding-top: 0.5rem;
    padding-bottom: 0;
}

.far {
    background-color: #fff;
    border-radius: 50%;
}

.footer-style {
    border-top: 2px solid black;
    background-color: #fff;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.boxes {
    border: 2px solid black;
    border-radius: 5px;
    margin-bottom: 1rem;
    margin-top: 1rem;
    padding: 1rem;
    width: auto;
    background-color: #fff;
}

.innerbox-headline {
    border-bottom: 1px solid black;
}

.innerbox-content {
    margin-top: 2rem;
    margin-bottom: 2rem;
}

.two-boxes-row-height {
    height: 325px;
}

.innerbox-button {
    border-top: 1px solid black;
    padding-top: 1rem;
}

.joke-container {
    margin-top: 8rem;
}

#joke {
    text-align: justify;
}

.recipe-container {
    margin-bottom: 4rem;
}

button {
    
}

.btn-info {
    background-color: #ea632b;
    border-color: #ea632b;
    font-family: 'Roboto Mono', sans-serif;
}

.btn-info:hover {
    color: #fff;
    background-color: #ea632b;
    border-color: #ea632b;
}

